--- a/package.json
+++ b/package.json
@@ -29,12 +29,13 @@
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "moment": "^2.29.4",
+    "moment": "^2.30.1",
     "multer": "^1.4.4",
     "mysql2": "^3.6.0",
     "node-fetch": "^2.7.0",
     "nodemailer": "^6.9.7",
-    "pdfkit": "^0.13.0"
+    "pdfkit": "^0.13.0",
+    "puppeteer": "^24.23.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
